# stm32f4-disco-rs

./: .gitignore  Cargo.toml  memory.x
.cargo/: config.toml
src/: main.rs
