[package]
name = "stm32f4-disco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
rtt-target = "0.5.0"
stm32f4xx-hal = { version = "0.20.0", features = ["stm32f407", "usb_fs", "i2s"] }
usb-device = "0.3.2"
usbd-serial= "0.2.1"
